HTML elements & syntax

--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <! DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Learning CSS
-        </title>
-    </head>
-    <body>
-        <h1>
-            HTML
-        <p>
-            HTML is a markup language to structure content.
-        </p>
-        </h1>
-        <h2>
-            CSS
-        <p>
+  <head>
+    <title>Learning HTML & CSS</title>
+  </head>
+  <body>
+    <!--link comments-->
+    <a href="https://github.com/okedo01"> welcome to my github </a>
+    <a href="about.html"> about us </a>
 
-            CSS is the language used to style web pages.
-        </p>
-        </h2>
-    </body>
-    </html>
+    <div>
+      <p>HTML is a markup language to structure content.</p>
+
+      <p>CSS is the language used to style web pages.</p>
+    </div>
+
+    <div>
+      <h1>Learning web courses</h1>
+
+      <h3>HTML course</h3>
+
+      <h5>CSS course</h5>
+    </div>
+
+    <div>
+      <ul>
+        <li>tags</li>
+        <li>paragraphs</li>
+        <li>divisions</li>
+        <li>styles</li>
+      </ul>
+
+      <ol>
+        <li>tags</li>
+        <li>paragraphs</li>
+        <li>divisions</li>
+        <li>styles</li>
+      </ol>
+    </div>
+
+    <span> I am a span tag </span>
+
+    <img src="images (5).jpeg" alt="image of breezy" > 
+
+    <blockquote cite="https://blog.hubspot.com/">The future belongs to those who believe in the beauty of their dreams. </blockquote>
+  </body>
+</html>
