HTML Form Attributes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <body>
     <!--link comments-->
     <a href="https://github.com/okedo01"> welcome to my github </a>
+    <br><br>
     <a href="about.html"> about us </a>
+    <br><br>
+    <a href="forms.html"> about forms </a>
+    <br><br>
 
     <div>
       <p>HTML is a markup language to structure content.</p>
