linkink to another webpage

--- a/forms.html
+++ b/forms.html
@@ -81,5 +81,7 @@
       <input type="submit" value="submit your form" />
       <br /><br />
     </form>
+    <a href="https://www.google.com/search?q=how+to+create+html+forms&oq=how+to+create+html+forms&aqs=chrome..69i57.8844j0j7&sourceid=chrome&ie=UTF-8">learn more</a>
+
   </body>
 </html>
