--- a/forms.html
+++ b/forms.html
@@ -1,6 +1,14 @@
 <! DOCTYPE html>
 <html>
   <head>
+    <style>
+        div{
+            color: peru;
+        }
+        a{
+            color: brown;
+        }
+    </style>
     <title>Learning HTML Forms</title>
   </head>
   <body>
