--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <! DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="Style.css" />
     <title>Learning HTML & CSS</title>
   </head>
   <body>
     <!--link comments-->
-    <a href="https://github.com/okedo01"> welcome to my github </a>
-    <br><br>
-    <a href="about.html"> about us </a>
-    <br><br>
-    <a href="forms.html"> about forms </a>
-    <br><br>
-
     <div>
-      <p>HTML is a markup language to structure content.</p>
-
+      <h2>Welcome</h2>
+      <p>
+        The company itself is a very successful company. They leave the happy
+        ones to do their own pleasures, we never lead them to flight, pleasures
+        provide for the conveniences they
+        <a href="forms.html"> about forms </a> criticize him for. The pains that
+        are hated here are the pleasures. Let him be pleased with the pleasures
+        of life, he will rebuke the harsher pleasures of life, and repulse them;
+        We lead with the distinction that by law he is often held free from
+        accusers. Pains?
+      </p>
+      <br />
+      <h2>CSS course</h2>
       <p>CSS is the language used to style web pages.</p>
     </div>
 
@@ -41,11 +46,30 @@
         <li>styles</li>
       </ol>
     </div>
+    n>
 
-    <span> I am a span tag </span>
+    <img src="images (5).jpeg" alt="image of breezy" />
 
-    <img src="images (5).jpeg" alt="image of breezy" > 
-
-    <blockquote cite="https://blog.hubspot.com/">The future belongs to those who believe in the beauty of their dreams. </blockquote>
+    <blockquote cite="https://blog.hubspot.com/">
+      The future belongs to those who believe in the beauty of their dreams.
+    </blockquote>
   </body>
+  <br /><br />
+  <a href="https://github.com/okedo01"> welcome to my github </a>
+  <br /><br />
+  <a href="about.html"> about us </a>
+  <br /><br />
+
+  <br /><br />
+  <span>sapn tag</span>
+  <em>em tag</em>
+  <a> anchor tag</a>
+  <br />
+  <p>paragraph</p>
+  <h2>head2</h2>
+  <ul>
+    <li>list1</li>
+    <li>list2</li>
+  </ul>
+  <div>divisions</div>
 </html>
