--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <! DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="Style.css" />
     <title>About page</title>
   </head>
   <body>
