--- a/forms.html
+++ b/forms.html
@@ -1,14 +1,7 @@
 <! DOCTYPE html>
 <html>
   <head>
-    <style>
-        div{
-            color: peru;
-        }
-        a{
-            color: brown;
-        }
-    </style>
+
     <title>Learning HTML Forms</title>
   </head>
   <body>
@@ -89,7 +82,9 @@
       <input type="submit" value="submit your form" />
       <br /><br />
     </form>
-    <a href="https://www.google.com/search?q=how+to+create+html+forms&oq=how+to+create+html+forms&aqs=chrome..69i57.8844j0j7&sourceid=chrome&ie=UTF-8">learn more</a>
-
+    <a
+      href="https://www.google.com/search?q=how+to+create+html+forms&oq=how+to+create+html+forms&aqs=chrome..69i57.8844j0j7&sourceid=chrome&ie=UTF-8"
+      >learn more</a
+    >
   </body>
 </html>
