semantic tags tutorial

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <li>divisions</li>
         <li>styles</li>
       </ul>
-
+      <p class="error">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum nihil
+        enim delectus iusto similique ad itaque cupiditate dolorum dicta
+        laudantium?
+      </p>
       <ol>
         <li>tags</li>
         <li>paragraphs</li>
@@ -46,9 +50,15 @@
         <li>styles</li>
       </ol>
     </div>
-    n>
 
-    <img src="images (5).jpeg" alt="image of breezy" />
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, eius sint.
+      Praesentium sunt ipsa repellendus inventore quia harum dolores neque
+      atque! Facilis accusantium enim libero. Numquam autem praesentium
+      consequuntur quas.
+    </p>
+
+    <img src="istockphoto-1403846937-612x612.jpg" alt="inspiration" />
 
     <blockquote cite="https://blog.hubspot.com/">
       The future belongs to those who believe in the beauty of their dreams.
