--- a/semantic_tags.html
+++ b/semantic_tags.html
@@ -5,8 +5,9 @@
     <title>Semantic Tags</title>
   </head>
   <body>
-    <header>
+    <header class="image">
       <h2>Chris Brown Biography.</h2>
+      <h4>CB Senior</h4>
     </header>
     <section class="chris">
       <img
@@ -87,7 +88,7 @@
         repellendus quam!
       </p>
       <form>
-        <input type="email" name="email" placeholder="enter emeil" required>
+        <input type="email" name="email" placeholder="enter emeil" required />
       </form>
     </section>
   </body>
