--- a/semantic_tags.html
+++ b/semantic_tags.html
@@ -5,11 +5,34 @@
     <title>Semantic Tags</title>
   </head>
   <body>
-    <header class="image">
+    <nav class="list">
+      <ul>
+        <li>
+          <a href="https://www.google.com/search?q=chris+brown+albums&sca"
+           class="join" >ulbums</a
+          >
+        </li>
+        <li>
+          <a href="https://www.google.com/search?q=chris+brow+awards&oq"
+            >awards</a
+          >
+        </li>
+        <li>
+          <a href="https://wynk.in/music/artist/chris-brown/wa_5d339005"
+            >hit songs</a
+          >
+        </li>
+        <li>
+          <a href="https://www.google.com/search?q=chris+brown+videos&oq"
+            >videos</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <header>
       <h2>Chris Brown Biography.</h2>
-      <h4>CB Senior</h4>
     </header>
-    <section class="chris">
+    <section class="image">
       <img
         src="img/chrisbrownofficial-20211030-0003.jpg"
         alt="image of breezy"
@@ -20,66 +43,37 @@
           <span>Breezy Page</span>
         </h3>
       </div>
-      <nav class="list">
-        <ul>
-          <li><a href="/ulbum.html">ulbums</a></li>
-          <li><a href="/awards.html">awards</a></li>
-          <li><a href="/songs.html">hit songs</a></li>
-          <li><a href="/cerebration.html">cerebrations</a></li>
-        </ul>
-      </nav>
+  
     </section>
     <main class="words">
       <article class="history">
         <h3>Origin of Breezy</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores
-          voluptatem doloremque sunt sequi iste cupiditate ipsam odit accusamus
-          illo iusto. Fugiat dolores ducimus, perferendis ipsum sequi iusto
-          temporibus laboriosam recusandae voluptatibus, asperiores, nesciunt
-          aperiam odio neque? Officiis provident deserunt qui ut officia facere
-          ipsum quaerat amet quibusdam voluptas. Sunt, dolore commodi aut
-          dolores, nesciunt eum temporibus nostrum ad sapiente, numquam adipisci
-          veritatis natus magnam exercitationem vitae molestias. At rem fugit
-          amet, nisi nihil blanditiis dolor reiciendis iure molestiae laborum
-          excepturi culpa aspernatur ut accusamus, repellendus doloremque illo.
-          Animi quasi consequuntur temporibus maxime eum, esse mollitia
-          sapiente, quas, porro sit aspernatur. Aliquid, reiciendis quisquam
-          optio distinctio eum animi, nesciunt tempore iure totam exercitationem
-          voluptatem nostrum nulla deserunt qui ab. Expedita fuga fugiat
-          accusamus quasi cupiditate quod sequi excepturi molestiae. Quaerat
-          vitae saepe qui nobis non quia dignissimos dolorem reiciendis soluta
-          consectetur? Nesciunt error magni quae provident corrupti vel, eum
-          voluptas! Natus culpa odit provident esse accusamus aperiam dolorum
-          reiciendis incidunt sit officia porro, velit quibusdam ullam, rem
-          libero! Eius sint tempore odio placeat ea maxime inventore dolorum,
-          veritatis ipsa aliquam. Possimus ex impedit sequi fugiat ut mollitia
-          eaque incidunt exercitationem iste nulla alias, minus fuga consectetur
-          minima natus aut labore et.
+          Christopher Maurice Brown was born on May 5, 1989, in the small town
+          of Tappahannock, Virginia, to Joyce Hawkins, a former day care center
+          director, and Clinton Brown, a corrections officer at a local prison.
+          He has an older sister, Lytrell Bundy, who works in a bank
+        </p>
+        <p>
+          <span
+            >Chris Brown is by far no stranger to South Africa having
+            successfully toured the country in 2012 for the Carpe Diem Tour and
+            again in 2015 for the Chris Brown X Tour Live</span
+          >
         </p>
       </article>
       <ul>
-        <li>
-          <img
-            src="img/chrisbrownofficial-20220329-0012.jpg"
-            alt="chris image"
-          />
-        </li>
+      
         <li>
           <img
             src="img/chrisbrownofficial-20220329-0005.jpg"
             alt="brown image"
           />
         </li>
-        <li>
-          <img
-            src="img/chrisbrownofficial-20220329-0007.jpg"
-            alt="breezy image"
-          />
-        </li>
+        
       </ul>
     </main>
-    <section class="join">
+    <section>
       <h4>Join Chris Club!</h4>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex accusantium
