positioning & layout of semantic elements

--- a/semantic_tags.html
+++ b/semantic_tags.html
@@ -9,7 +9,7 @@
       <ul>
         <li>
           <a href="https://www.google.com/search?q=chris+brown+albums&sca"
-           class="join" >ulbums</a
+           class="join_2" >ulbums</a
           >
         </li>
         <li>
@@ -32,17 +32,18 @@
     <header>
       <h2>Chris Brown Biography.</h2>
     </header>
-    <section class="image">
+    <section class="hero_image">
       <img
         src="img/chrisbrownofficial-20211030-0003.jpg"
         alt="image of breezy"
       />
+  
       <div class="page">
         <h3>
           welcome to <br />
           <span>Breezy Page</span>
         </h3>
-      </div>
+      </div><br>
   
     </section>
     <main class="words">
@@ -53,7 +54,7 @@
           of Tappahannock, Virginia, to Joyce Hawkins, a former day care center
           director, and Clinton Brown, a corrections officer at a local prison.
           He has an older sister, Lytrell Bundy, who works in a bank
-        </p>
+        </p><br>
         <p>
           <span
             >Chris Brown is by far no stranger to South Africa having
@@ -62,7 +63,7 @@
           >
         </p>
       </article>
-      <ul>
+      <ul class="image">
       
         <li>
           <img
@@ -70,10 +71,13 @@
             alt="brown image"
           />
         </li>
+        <li>
+          <img src="img/chrisbrownofficial-20220329-0007.jpg" alt="breezy image">
+        </li>
         
       </ul>
     </main>
-    <section>
+    <section class="join">
       <h4>Join Chris Club!</h4>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex accusantium
@@ -85,5 +89,8 @@
         <input type="email" name="email" placeholder="enter emeil" required />
       </form>
     </section>
+    <footer>
+      <p class="copyright">&copyright 2023 ChrisBrown</p>
+    </footer>
   </body>
 </html>
