pseudo classes & elements

--- a/semantic_tags.html
+++ b/semantic_tags.html
@@ -8,8 +8,10 @@
     <nav class="list">
       <ul>
         <li>
-          <a href="https://www.google.com/search?q=chris+brown+albums&sca"
-           class="join_2" >ulbums</a
+          <a
+            href="https://www.google.com/search?q=chris+brown+albums&sca"
+            class="join_2"
+            >ulbums</a
           >
         </li>
         <li>
@@ -37,24 +39,25 @@
         src="img/chrisbrownofficial-20211030-0003.jpg"
         alt="image of breezy"
       />
-  
+
       <div class="page">
         <h3>
           welcome to <br />
           <span>Breezy Page</span>
         </h3>
-      </div><br>
-  
+      </div>
     </section>
-    <main class="words">
-      <article class="history">
-        <h3>Origin of Breezy</h3>
+    <main>
+      <article>
+        <h3 class="origin">Origin of Breezy</h3>
+        <br />
         <p>
           Christopher Maurice Brown was born on May 5, 1989, in the small town
           of Tappahannock, Virginia, to Joyce Hawkins, a former day care center
           director, and Clinton Brown, a corrections officer at a local prison.
           He has an older sister, Lytrell Bundy, who works in a bank
-        </p><br>
+        </p>
+        <br />
         <p>
           <span
             >Chris Brown is by far no stranger to South Africa having
@@ -64,7 +67,6 @@
         </p>
       </article>
       <ul class="image">
-      
         <li>
           <img
             src="img/chrisbrownofficial-20220329-0005.jpg"
@@ -72,25 +74,25 @@
           />
         </li>
         <li>
-          <img src="img/chrisbrownofficial-20220329-0007.jpg" alt="breezy image">
+          <img
+            src="img/chrisbrownofficial-20220329-0007.jpg"
+            alt="breezy image"
+          />
         </li>
-        
       </ul>
     </main>
     <section class="join">
       <h4>Join Chris Club!</h4>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex accusantium
-        magni labore quasi atque voluptate praesentium! Maiores error excepturi,
-        nesciunt necessitatibus rerum tempore, nostrum sequi tempora sit iste
-        repellendus quam!
+        When some people hear his name, the first thing they think of is his
+        domestic violence case when he assaulted his then-girlfriend, Rhianna.
       </p>
       <form>
         <input type="email" name="email" placeholder="enter emeil" required />
       </form>
     </section>
     <footer>
-      <p class="copyright">&copyright 2023 ChrisBrown</p>
+      <p class="copyright">&copyright 2023 Okedo</p>
     </footer>
   </body>
 </html>
